--- a/files/index.html
+++ b/files/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Files</title>
+    <style>
+    body{
+    	background-color: white
+    }
+    </style>
+  </head>
+  <body>
+	  <a href="https://discordbotlists.tk/">Home</a>
+	  <p> </p>
+	  <a href="https://discordbotlists.tk/files/Shield_Bot_List_Logo_Christmas.png">Shield_Bot_List_Logo_Christmas.png</a>
+</body>
+</html>
