--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width">
     <title>discordbotlists</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    
   </head>
   <body>
     <h1>These are some of the many discord bot lists.</h1>
     <a href="shieldbotlist">ShieldBotList</a>
     <p>More Coming Soon</p>
+    <script async src="https://arc.io/widget.min.js#48yyQbVw"></script>
 </body>
 </html>
