--- a/shieldbotlist/index.html
+++ b/shieldbotlist/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
     body{
-    	background-color: lightblue
+    	background-color: #7289DA
     }
     </style>
   </head>
