--- a/files/index.html
+++ b/files/index.html
@@ -13,6 +13,6 @@
   <body>
 	  <a href="https://discordbotlists.tk/">Home</a>
 	  <p> </p>
-	  <a href="https://discordbotlists.tk/files/ShieldBotListLogoChristmas.png">ShieldBotListLogoChristmas.png</a>
+	  <a href="https://pbs.twimg.com/profile_images/1313103036865286144/0FmwjOEr_400x400.jpg">ShieldBotList Logo</a>
 </body>
 </html>
