--- a/shieldbotlist/index.html
+++ b/shieldbotlist/index.html
@@ -24,5 +24,6 @@
     <p>Are you a new developer who wants to get their bot in as many servers as possible? Or are you a server builder looking for useful bots? Well then, you have come to the right place! Sheild Bot List is a relatively new bot list that has over 30 bots and about 100 members!</p>
     <p>We have:</p> <p>Short queue</p> <p>Good staff</p> <p>Fun bots</p> <p>Nice community</p> <p>A bot list</p> <p>And much more!</p>
     <p>We were founded by WhoAboutYT#5719 aka Kahaan</p>
+    <script async src="https://arc.io/widget.min.js#48yyQbVw"></script>
 </body>
 </html>
