--- a/files/index.html
+++ b/files/index.html
@@ -11,8 +11,9 @@
     </style>
   </head>
   <body>
-	  <a href="https://discordbotlists.tk/">Home</a>
-	  <p> </p>
-	  <a href="https://pbs.twimg.com/profile_images/1313103036865286144/0FmwjOEr_400x400.jpg">ShieldBotList Logo</a>
-</body>
+    <a href="https://discordbotlists.tk/">Home</a>
+    <p> </p>
+    <a href="https://pbs.twimg.com/profile_images/1313103036865286144/0FmwjOEr_400x400.jpg">ShieldBotList Logo</a>
+    <script async src="https://arc.io/widget.min.js#48yyQbVw"></script>
+  </body>
 </html>
