--- a/shieldbotlist/index.html
+++ b/shieldbotlist/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>ShieldBotList</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="/style.css" rel="stylesheet" type="text/css" />
     <style>
     body{
     	background-color: #7289DA
