--- a/files/index.html
+++ b/files/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Files</title>
+		<link href="/style.css" rel="stylesheet" type="text/css" />
     <style>
     body{
     	background-color: white
