--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <title>discordbotlists</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    
+    <meta name=¨description¨ content=¨The best place to find your bot´s needs and your needs.¨>
+
   </head>
   <body>
     <h1>These are some of the many discord bot lists.</h1>
