--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>These are some of the many discord bot lists.</h1>
     <a href="shieldbotlist">ShieldBotList</a>
     <p>More Coming Soon</p>
+    <a href="//www.dmca.com/Protection/Status.aspx?ID=69802f76-4f61-4169-b875-fa8bc833f85f" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120l.png?ID=69802f76-4f61-4169-b875-fa8bc833f85f"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
     <script async src="https://arc.io/widget.min.js#48yyQbVw"></script>
 </body>
 </html>
