--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>discordbotlists</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <meta name="description" content='The best place to find your bot´s needs and your needs.¨>
+    <meta name="description" content="The best place to find your bot´s needs and your needs.">
     <script data-ad-client="ca-pub-7576806005744872" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
