--- a/shieldbotlist/index.html
+++ b/shieldbotlist/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>ShieldBotList</title>
     <link href="/style.css" rel="stylesheet" type="text/css" />
-    <meta content="description" >
+    <meta name="description" content="The official shield bot list.">
     <style>
     body{
     	background-color: #7289DA
